--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/030/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/030/a/index.xhtml
@@ -16,6 +16,7 @@
 				</com:ValidatorScript>
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="ccg030.a.style.css" />
+			<com:scriptfile path="/view/ccg/common/model.js" />
 			<com:scriptfile path="ccg030.a.start.js" />
 			<com:scriptfile path="ccg030.a.vm.js" />
 			<com:scriptfile path="ccg030.a.service.js" />
@@ -23,16 +24,10 @@
 
 		<ui:define name="content">
 			<div id="functions-area" class="headerStyle">
-				<button class="btnSetting" id="btn_new" data-bind="click: createNewFlowMenu"
-					tabindex="1">#{i18n.getText('CCG030_2')}</button>
-				<button class="proceed btnSetting" id="btnRegistry"
-					data-bind="click: registryFlowMenu, enable: $root.errors.isEmpty"
-					tabindex="2">#{i18n.getText('CCG030_3')}</button>
-				<button class="danger btnSetting" id="btnDelete"
-					data-bind="click: deleteFlowMenu, enable: !isCreate()"
-					tabindex="3">#{i18n.getText('CCG030_5')}</button>
-				<button class="btnSetting" id="btn004"
-					data-bind="click : closeDialog" tabindex="4">#{i18n.getText('CCG030_6')}</button>
+				<button class="btnSetting" id="btn_new" data-bind="click: createNewFlowMenu" tabindex="1">#{i18n.getText('CCG030_2')}</button>
+				<button class="proceed btnSetting" id="btnRegistry" data-bind="click: registryFlowMenu, enable: $root.errors.isEmpty" tabindex="2">#{i18n.getText('CCG030_3')}</button>
+				<button class="danger btnSetting" id="btnDelete" data-bind="click: deleteFlowMenu, enable: !isCreate()" tabindex="3">#{i18n.getText('CCG030_5')}</button>
+				<button class="btnSetting" id="btn004" data-bind="click : closeDialog" tabindex="4">#{i18n.getText('CCG030_6')}</button>
 			</div>
 			<div class="container">
 				<div id="contents-area" class="cf">
@@ -40,9 +35,7 @@
 						class="bg-green caret-right caret-background">
 						<i class="icon icon-searchbox"></i>
 						<div class="search">
-							<div style="float: left">
-								<div id="searchBox" style="width: 360px; margin-bottom: 10px;"
-									data-bind="ntsSearchBox: {
+							<div id="searchBox" style="width: 360px;" data-bind="ntsSearchBox: {
 								searchMode: 'filter',
 								name: '#[CCG030_20]',
 								targetKey: 'topPageCode',
@@ -52,9 +45,8 @@
 								selected: selectedFlowMenuCD, 
 								selectedKey: 'topPageCode', 
 								fields: ['topPageCode', 'topPageName']}" />
-							</div>
 						</div>
-						<div class="gridlist" style="margin-bottom: 20px;">
+						<div class="gridlist">
 							<table id="flow-menu-list"
 								data-bind="ntsGridList: {
 								height: 340,
@@ -69,8 +61,9 @@
 					<div id="right-content">
 						<table class="right-layout">
 							<tr data-bind="with: selectedFlowMenu">
-								<td><div
-										data-bind="ntsFormLabel: { constraint: 'TopPagePartCode',constraint: ['TopPagePartCode','TopPagePartName'], required: true }">#{i18n.getText('CCG030_11')}</div></td>
+								<td>
+									<div data-bind="ntsFormLabel: { constraint: 'TopPagePartCode',constraint: ['TopPagePartCode','TopPagePartName'], required: true }">#{i18n.getText('CCG030_11')}</div>
+								</td>
 								<td colspan="2"><input id="inpCode"
 									data-bind="ntsTextEditor: { value: topPageCode, constraint: 'TopPagePartCode', required: true, enable: $parent.isCreate, option: {autofill:true, filldirection:'left'}, name: '#[CCG030_21]'}"
 									tabindex="5" /> <input id="inpName"
@@ -88,39 +81,34 @@
 											accept: ['.zip'],
 											aslink: true,
 											text: 'CCG030_13',
+											required: true,
 											uploadFinished: uploadFinish,
 											onfilenameclick: open030B_Dialog.bind($data) }"></div>
 								</td>
-								<!-- <td><button class="danger"
-										data-bind="click: deleteButtonClick, enable: isDelete()"
-										tabindex="9" style ="width: 70px;">#{i18n.getText('CCG030_5')}</button></td> -->
+								<td></td>
 							</tr>
 							<tr>
 								<td></td>
 								<td>
-									<button class="btn-download"
-										data-bind="click: download, enable: isDelete()"
-										tabindex="10" >#{i18n.getText('CCG030_14')}</button>
+									<button class="btn-download" data-bind="click: download, enable: enablePreview" tabindex="10" >#{i18n.getText('CCG030_14')}</button>
 								</td>
 								<td></td>
 							</tr>
 							<tr data-bind="with: selectedFlowMenu">
 								<td><div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CCG030_15')}</div></td>
-								<td><span id="">#{i18n.getText('CCG030_16')}</span> <input
-									id="inp_width" class="input-size"
-									data-bind="ntsNumberEditor: { value: widthSize, constraint: 'Width', required: true , immediate:true , name: '#[CCG030_23]'}"
-									tabindex="11" /> <span>#{i18n.getText('CCG030_18')}</span> <span
-									style="margin-left: 30px;">#{i18n.getText('CCG030_17')}</span>
-									<input id="inp_height" class="input-size"
-									data-bind="ntsNumberEditor: { value: heightSize, constraint: 'Height', required: true , immediate: true , name: '#[CCG030_24]'}"
-									tabindex="12" /> <span>#{i18n.getText('CCG030_18')}</span></td>
+								<td>
+									<span id="">#{i18n.getText('CCG030_16')}</span>
+									<input id="inp_width" class="input-size" data-bind="ntsNumberEditor: { value: width, constraint: 'Width', required: true , immediate:true , name: '#[CCG030_23]'}" tabindex="11" />
+									<span>#{i18n.getText('CCG030_18')}</span>
+									<span style="margin-left: 30px;">#{i18n.getText('CCG030_17')}</span>
+									<input id="inp_height" class="input-size" data-bind="ntsNumberEditor: { value: height, constraint: 'Height', required: true , immediate: true , name: '#[CCG030_24]'}" tabindex="12" />
+									<span>#{i18n.getText('CCG030_18')}</span>
+								</td>
 								<td></td>
 							</tr>
 							<tr>
-								<td><button id="preview"
-										data-bind="click : open030B_Dialog, enable: isDelete" tabindex="13"
-										style="margin-top: 25px;">#{i18n.getText('CCG030_4')}</button></td>
-										
+								<td>
+									<button id="preview" data-bind="click : open030B_Dialog, enable: enablePreview" tabindex="13" style="margin-top: 25px;">#{i18n.getText('CCG030_4')}</button></td>
 								<td></td>
 								<td></td>
 							</tr>
