--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/a/index.xhtml
@@ -46,20 +46,25 @@
 							<!-- Widget -->
 							<div class="widget-container">
 								<com:ko-foreach bind="placements">
-									<div class="widget-panel preview"
-										data-bind="attr: {id: placementID}">
-										<div class="panel-header">
-											<span class="title" data-bind="text: name"></span>
-											<div class="remove-button"
-												data-bind="click: $parent.removeWidget.bind($parent, placementID)">
-												<span class="ui-icon ui-icon-closethick"></span>
+									<div class="widget-panel preview" data-bind="attr: {id: placementID}">
+										<div class="remove-button" data-bind="click: $parent.removeWidget.bind($parent, placementID)">
+											<span class="ui-icon ui-icon-closethick"></span>
+										</div>
+										<!-- External Url -->
+										<com:ko-if bind="isExternalUrl()">
+											<div class="panel-header">
+												<span class="title" data-bind="text: name"></span>
 											</div>
-										</div>
-										<div class="panel-content">
-											<!-- External Url -->
-											<iframe data-bind="visible: isExternalUrl, attr:{src: url}" />
-											<!-- TopPage Part -->
-										</div>
+											<div class="panel-content">
+												<iframe data-bind="visible: isExternalUrl, attr:{src: url}" />
+											</div>
+										</com:ko-if>
+										<!-- FlowMenu -->
+										<com:ko-if bind="isFlowMenu()">
+											<com:ko bind="topPagePart" tag="with">
+												<ui:include src="/view/ccg/common/flowmenu.xhtml" />
+											</com:ko>
+										</com:ko-if>
 									</div>
 								</com:ko-foreach>
 							</div>
