--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/c/index.xhtml
@@ -23,16 +23,22 @@
 					<div class="placement-container overflow-x overflow-y">
 						<div class="widget-container">
 							<com:ko-foreach bind="placements">
-								<div class="widget-panel preview"
-									data-bind="attr: {id: placementID}">
-									<div class="panel-header">
-										<span class="title" data-bind="text: name"></span>
-									</div>
-									<div class="panel-content">
-										<!-- External Url -->
-										<iframe data-bind="visible: isExternalUrl, attr:{src: url}" />
-										<!-- TopPage Part -->
-									</div>
+								<div class="widget-panel preview" data-bind="attr: {id: placementID}">
+									<!-- External Url -->
+									<com:ko-if bind="isExternalUrl()">
+										<div class="panel-header">
+											<span class="title" data-bind="text: name"></span>
+										</div>
+										<div class="panel-content">
+											<iframe data-bind="visible: isExternalUrl, attr:{src: url}" />
+										</div>
+									</com:ko-if>
+									<!-- FlowMenu -->
+									<com:ko-if bind="isFlowMenu()">
+										<com:ko bind="topPagePart" tag="with">
+											<ui:include src="/view/ccg/common/flowmenu.xhtml" />
+										</com:ko>
+									</com:ko-if>
 								</div>
 							</com:ko-foreach>
 						</div>
