--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/h/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/h/index.xhtml
@@ -11,50 +11,62 @@
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="../share/model.js" />
 			<com:scriptfile path="cmf001.h.vm.js" />
-			<com:stylefile path = "cmf001.h.style.css"/>
+			<com:stylefile path="cmf001.h.style.css" />
 			<com:scriptfile path="cmf001.h.start.js" />
 		</ui:define>
 
 		<ui:define name="content">
-			<div class="contents-area dialog-contents" data-bind="with: characterDataFormatSetting">
-				<div id = "H1_1" class = "label dialog-title" >#{i18n.getText('CMF001_265')}</div>
-				<div class = "div-table" >
-					<div class = "div-table-row">
-						<div id = "H2_1" class = "div-table-col-2" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_266')}</div>
-						<div id = "H2_2" tabindex = "1" class = "div-table-col">
-							<div id = "H2_3" tabindex ="-1" class = "div-table-col" data-bind="ntsRadioButton: {checked: effectiveDigitLength, option: $parent.effectDigitItem()[0], name: '#[CMF001_267]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'effectDigitCls'}"></div>
-							<div id = "H2_4" tabindex ="-1" class = "div-table-col radio-group" data-bind="ntsRadioButton: {checked: effectiveDigitLength, option: $parent.effectDigitItem()[1], name: '#[CMF001_267]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'effectDigitCls' }"></div>
+			<div class="contents-area dialog-contents"
+				data-bind="with: characterDataFormatSetting">
+				<div id="H1_1" class="label dialog-title">#{i18n.getText('CMF001_265')}</div>
+				<div class="div-table">
+					<div class="div-table-row">
+						<div id="H2_1" class="div-table-col-2"
+							data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_266')}</div>
+						<div id="H2_2" tabindex="1" class="div-table-col">
+							<div id="H2_3" tabindex="-1" class="div-table-col"
+								data-bind="ntsRadioButton: {checked: effectiveDigitLength, option: $parent.effectDigitItem()[0], name: '#[CMF001_267]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'effectDigitCls'}"></div>
+							<div id="H2_4" tabindex="-1" class="div-table-col radio-group"
+								data-bind="ntsRadioButton: {checked: effectiveDigitLength, option: $parent.effectDigitItem()[1], name: '#[CMF001_267]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'effectDigitCls' }"></div>
 						</div>
-						<div class = "div-table-col" >
-							<input id = "H2_5" tabindex = "2" data-bind="ntsTextEditor: {
+						<div class="div-table-col">
+							<input id="H2_5" tabindex="2"
+								data-bind="ntsTextEditor: {
 								value: startDigit,
 								option : {width : '30px'},
 								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
-							<div id = "H2_6"  class = "label" style= "display:inline">#{i18n.getText('CMF001_270')}</div>
+							<div id="H2_6" class="label" style="display: inline">#{i18n.getText('CMF001_270')}</div>
 						</div>
-						<div  class = "div-table-col" >
-							<input id = "H2_7" tabindex = "3"  data-bind="ntsTextEditor: {
+						<div class="div-table-col">
+							<input id="H2_7" tabindex="3"
+								data-bind="ntsTextEditor: {
 								value: endDigit,
 								option : {width : '30px'},
 								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
-							<div id = "H2_8" class =" label" style= "display:inline">#{i18n.getText('CMF001_273')}</div>
+							<div id="H2_8" class=" label" style="display: inline">#{i18n.getText('CMF001_273')}</div>
 						</div>
 					</div>
-					<div class = "div-table-row">
-						<div id = "H3_1" class = "div-table-col-2" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_275')}</div>
-						<div id = "H3_2" tabindex = "4" class = "div-table-col">
-							<div id = "H3_3" tabindex ="-1" class = "div-table-col" data-bind="ntsRadioButton: {checked: codeEditing, option: $parent.codeEditingItem()[0], name: '#[CMF001_276]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedLengCls'}"></div>
-							<div id = "H3_4" tabindex ="-1" class = "div-table-col radio-group" data-bind="ntsRadioButton: {checked: codeEditing, option: $parent.codeEditingItem()[1], name: '#[CMF001_276]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedLengCls' }"></div>
+					<div class="div-table-row">
+						<div id="H3_1" class="div-table-col-2"
+							data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_275')}</div>
+						<div id="H3_2" tabindex="4" class="div-table-col">
+							<div id="H3_3" tabindex="-1" class="div-table-col"
+								data-bind="ntsRadioButton: {checked: codeEditing, option: $parent.codeEditingItem()[0], name: '#[CMF001_276]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedLengCls'}"></div>
+							<div id="H3_4" tabindex="-1" class="div-table-col radio-group"
+								data-bind="ntsRadioButton: {checked: codeEditing, option: $parent.codeEditingItem()[1], name: '#[CMF001_276]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedLengCls' }"></div>
 						</div>
-						<div  class = "div-table-col" >
-							<input id = "H3_5" tabindex = "5"  data-bind="ntsTextEditor: {
+						<div class="div-table-col">
+							<input id="H3_5" tabindex="5"
+								data-bind="ntsTextEditor: {
 								value: codeEditDigit,
 								option : {width : '30px'},
 								enable: !(codeEditing() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
-							<div id = "H3_6" class =" label" style= "display:inline">#{i18n.getText('CMF001_280')}</div>
+							<div id="H3_6" class=" label" style="display: inline">#{i18n.getText('CMF001_280')}</div>
 						</div>
-						<div class = "div-table-col">
-							<div id="H3_7" tabindex = "6" style = "display:inline-block; width :150px;" data-bind="ntsComboBox: {
+						<div class="div-table-col">
+							<div id="H3_7" tabindex="6"
+								style="display: inline-block; width: 150px;"
+								data-bind="ntsComboBox: {
 								name: '#{i18n.getText('CMF001_281')}',
 								options: $parent.fixedLengMethod,
 								editable: false,
@@ -66,26 +78,51 @@
 							</div>
 						</div>
 					</div>
-					<div class = "div-table-row">
-						<div class = "div-table-col-2">
-							<div id = "H4_1" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_290')}</div>
+					<div class="div-table-row">
+						<div class="div-table-col-2">
+							<div id="H4_1" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_290')}</div>
 						</div>
-						<div class = "div-table-col">
-							<button id = "H4_1" tabindex = "7" class ="vertical-align" data-bind="click: $parent.open001_K, enable: $parent.inputMode">#{i18n.getText('CMF001_291')}</button>
+						<div class="div-table-col">
+							<button id="H4_1" tabindex="7" class="vertical-align-center"
+								data-bind="click: function() {$parent.open001_K($data)}, enable: $parent.inputMode">#{i18n.getText('CMF001_291')}</button>
 						</div>
-						<div id = "H4_3" class ="label vertical-align" >コード</div>
-						<div id = "H4_4" class ="label vertical-align" style="margin-left: 15px;" >コード変換名</div>
+						<div id="H4_3" class="label-vertical-align-center"
+							data-bind="text: codeConvertCode().dispConvertCode"></div>
+						<div id="H4_4" class="label-vertical-align-center"
+							style="margin-left: 15px;"
+							data-bind="text: codeConvertCode().dispConvertName"></div>
 					</div>
-					<div class = "div-table-row">
-						<div class = "div-table-col-2">
-							<div id = "H5_1" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_292')}</div>
+					<div class="div-table-row">
+						<div class="div-table-col-2">
+							<div id="H5_1" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_292')}</div>
 						</div>
-						<div id = "H5_2" tabindex = "8" class = "div-table-col">
-							<div id = "H5_3" tabindex ="-1" class = "div-table-col" data-bind="ntsRadioButton: {checked: fixedValue, option: $parent.effectFixedValItem()[0], name: '#[CMF001_293]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedValCls'}"></div>
-							<div id = "H5_4" tabindex ="-1" class = "div-table-col" data-bind="ntsRadioButton: {checked: fixedValue, option: $parent.effectFixedValItem()[1], name: '#[CMF001_293]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedValCls' }"></div>
+						<div id="H5_2" tabindex="8" class="div-table-col">
+							<div id="H5_3" tabindex="-1" class="div-table-col"
+								data-bind="ntsRadioButton: {
+									checked: fixedValue, 
+									option: $parent.effectFixedValItem()[0], 
+									name: '#[CMF001_293]', 
+									optionValue: 'code', 
+									enable: $parent.inputMode, 
+									optionText: 'name', 
+									group: 'fixedValCls'
+									}">
+							</div>
+							<div id="H5_4" tabindex="-1" class="div-table-col radio-group"
+								data-bind="ntsRadioButton: {
+									checked: fixedValue, 
+									option: $parent.effectFixedValItem()[1], 
+									name: '#[CMF001_293]', 
+									optionValue: 'code', 
+									enable: $parent.inputMode, 
+									optionText: 'name', 
+									group: 'fixedValCls' 
+									}">
+							</div>
 						</div>
 						<div style="display: inline">
-							<input id = "H5_5" tabindex = "9"  data-bind="ntsTextEditor: {
+							<input id="H5_5" tabindex="9"
+								data-bind="ntsTextEditor: {
 								value: valueOfFixed,
 								option : {width : '200px'},
 								enable: !(fixedValue() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
@@ -93,12 +130,14 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div id="functions-area-bottom">
-				<button tabindex = "10" id="btn_H6_1" class="x-large proceed " data-bind="click: saveCharacterSetting">#{i18n.getText('CMF001_257')}</button>
-				<button tabindex = "11" id="btn_H6_2" class="large" data-bind="click: cancelCharacterSetting">#{i18n.getText('CMF001_268')}</button>
+				<button tabindex="10" id="btn_H6_1" class="x-large proceed "
+					data-bind="click: saveCharacterSetting">#{i18n.getText('CMF001_257')}</button>
+				<button tabindex="11" id="btn_H6_2" class="large"
+					data-bind="click: cancelCharacterSetting">#{i18n.getText('CMF001_268')}</button>
 			</div>
-			
+
 		</ui:define>
 	</ui:composition>
 </body>
