[KMF002] add css table monthly day common

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/base.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/base.xhtml
@@ -30,7 +30,7 @@
 			<!-- table month in year -->
 			<table>
 				<thead>
-					<tr>
+					<tr class="bg-dark-green">
 						<th>
 							<!-- E8_2 --> <span>#{i18n.getText('KMF002_12')}</span>
 						</th>
@@ -42,7 +42,7 @@
 				<tbody data-bind="foreach: arrMonth">
 					<tr>
 						<!-- E8_5 -->
-						<td><span data-bind="text: month"></span> <span>月度</span></td>
+						<td class="bg-green"><span data-bind="text: month"></span> <span>月度</span></td>
 						<!-- E8_6 -->
 						<td>
 							<div>
