--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/i/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/i/index.xhtml
@@ -55,7 +55,7 @@
 							</div>
 						</td>
 						<td><input
-							data-bind="ntsTextEditor: {
+							data-bind="ntsNumberEditor: {
 									value: fixedValue,
 									enable: isEditMode,
 									option : {width : '200px'}}" />
