--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/index.xhtml
@@ -142,7 +142,7 @@
 								<td><span class="label" data-bind="text: acceptItemName"></span></td>
 								<td>
 									<span class="label" data-bind="text: csvItemName"></span>
-									<button class="pull-right">#{i18n.getText('CMF001_167')}</button>
+									<button class="pull-right" data-bind="click: function() {$parent.openCMF001e($data)}">#{i18n.getText('CMF001_167')}</button>
 								</td>
 								<td><span class="label" data-bind="text: 'Sample Data From File'"></span></td>
 								<td>
