--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/l/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/l/index.xhtml
@@ -65,31 +65,31 @@
 								</div>
 							</td>
 							<td>
-								<input tabindex="2" data-bind="ntsTextEditor: {value: numberConditionValue1, 
+								<input tabindex="2" class="numberCondition" data-bind="ntsTextEditor: {value: numberConditionValue1, 
 															     enable: $parent.screenMode == 0, 
 															     name: '#[CMF001_390]',
 															     required: true,
 															     optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.NUMERIC"/>
-								<input tabindex="4" data-bind="ntsTextEditor: {value: characterConditionValue1, 
+								<input tabindex="4" class="characterCondition" data-bind="ntsTextEditor: {value: characterConditionValue1, 
 																 enable: $parent.screenMode == 0, 
 																 name: '#[CMF001_390]',
 																 required: true,
 																 optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.CHARACTER"/>
-								<input tabindex="6" data-bind="ntsTextEditor: {value: dateConditionValue1, 
+								<input tabindex="6" class="dateCondition" data-bind="ntsTextEditor: {value: dateConditionValue1, 
 								                                 enable: $parent.screenMode == 0, 
 								                                 name: '#[CMF001_390]',
 								                                 required: true,
 								                                 optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.DATE"/>
-								<input tabindex="8" data-bind="ntsTextEditor: {value: timeMomentConditionValue1, 
+								<input tabindex="8" class="timeMomentCondition" data-bind="ntsTextEditor: {value: timeMomentConditionValue1, 
 																 enable: $parent.screenMode == 0, 
 																 name: '#[CMF001_390]',
 																 required: true,
 																 optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.INS_TIME"/>
-								<input tabindex="10" data-bind="ntsTextEditor: {value: timeConditionValue1, 
+								<input tabindex="10" class="timeCondition" data-bind="ntsTextEditor: {value: timeConditionValue1, 
 																 enable: $parent.screenMode == 0, 
 																 name:'#[CMF001_390]',
 																 required: true,
@@ -105,27 +105,27 @@
 								</div>
 							</td>
 							<td>
-								<input tabindex="3" data-bind="ntsTextEditor: {value: numberConditionValue2, 
+								<input tabindex="3" class="numberCondition" data-bind="ntsTextEditor: {value: numberConditionValue2, 
 																 enable: $parent.screenMode == 0, 
 																 name:'#[CMF001_392]',
 																 required: true}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.NUMERIC" />
-								<input tabindex="5" data-bind="ntsTextEditor: {value: characterConditionValue2, 
+								<input tabindex="5" class="characterCondition" data-bind="ntsTextEditor: {value: characterConditionValue2, 
 																 enable: $parent.screenMode == 0, 
 																 name: '#[CMF001_392]',
 																 required: true}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.CHARACTER"/>
-								<input tabindex="7" data-bind="ntsTextEditor: {value: dateConditionValue2, 
+								<input tabindex="7" class="dateCondition" data-bind="ntsTextEditor: {value: dateConditionValue2, 
 								                                 enable: $parent.screenMode == 0, 
 								                                 name: '#[CMF001_392]',
 								                                 required: true}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.DATE"/>
-								<input tabindex="9" data-bind="ntsTextEditor: {value: timeMomentConditionValue2, 
+								<input tabindex="9" class="timeMomentCondition" data-bind="ntsTextEditor: {value: timeMomentConditionValue2, 
 																 enable: $parent.screenMode == 0, 
 																 name: '#[CMF001_392]',
 																 required: true}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.INS_TIME"/>
-								<input tabindex="11" data-bind="ntsTextEditor: {value: timeConditionValue2, 
+								<input tabindex="11" class="timeCondition" data-bind="ntsTextEditor: {value: timeConditionValue2, 
 																 enable: $parent.screenMode == 0, 
 																 name:'#[CMF001_392]',
 																 required: true}, 
